--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <div class="loader-container">
       <span class="loader"></span>
     </div>
+    <h1>Salom</h1>
     <script defer src="script.js"></script>
   </body>
 </html>
